--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,6 +97,8 @@ body {
   background-position: center top;
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  min-height: 100vh;
 }
 
 @media (min-width: 768px) {
